--- a/package.json
+++ b/package.json
@@ -24,27 +24,19 @@
     "eslint-plugin-react": "^7.16.0",
     "eslint-plugin-react-hooks": "^1.7.0",
     "file-loader": "^4.2.0",
-<<<<<<< HEAD
     "redux-devtools": "^3.5.0",
     "redux-devtools-extension": "^2.13.8",
-=======
     "prettier": "^1.19.1",
->>>>>>> f08a8f88051029eff1e5206878c27e16414d440e
     "style-loader": "^1.0.0",
     "webpack": "^4.41.2",
     "webpack-cli": "^3.3.10",
     "webpack-dev-server": "^3.9.0"
   },
   "dependencies": {
-<<<<<<< HEAD
     "axios": "^0.19.0",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
     "react-redux": "^7.1.3",
-    "react-router-dom": "^5.1.2",
     "redux": "^4.0.4",
-    "redux-thunk": "^2.3.0"
-=======
+    "redux-thunk": "^2.3.0",
     "@rocketseat/unform": "^1.6.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
@@ -53,6 +45,5 @@
     "react-scripts": "^3.2.0",
     "styled-components": "^4.4.1",
     "yup": "^0.27.0"
->>>>>>> f08a8f88051029eff1e5206878c27e16414d440e
   }
 }
